fixed overlapping div bug

--- a/src/components/design_header.module.css
+++ b/src/components/design_header.module.css
@@ -390,6 +390,7 @@
     z-index: 9999;
     top: 0;
     display: none;
+    width: 0;
 }
 
 .smaller_ham_menu_container {
@@ -399,6 +400,7 @@
     top: 0;
     transition: all 0.3s ease;
     display: none;
+    width: 0;
 }
 
 .ham_instagram {
